fix: BaseEntity 적용시 발생하는 오류 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/pokeranger
+spring.datasource.url=jdbc:mysql://localhost:3306/pokeranger?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=elice
 spring.datasource.password=elice0000
 
