--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
-	implementation 'junit:junit:4.13.1'
+//	implementation 'junit:junit:4.13.1'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -49,8 +49,8 @@ dependencies {
 
 	//예외처리 TEST
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0') // 사용하고 있는 JUnit 버전에 따라 변경 가능
-	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.7.0') // 사용하고 있는 JUnit 버전에 따라 변경 가능
+//	testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0') // 사용하고 있는 JUnit 버전에 따라 변경 가능
+//	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.7.0') // 사용하고 있는 JUnit 버전에 따라 변경 가능
 }
 
 test {
